--- a/LabSymfony/templates/doctor/index.html.twig
+++ b/LabSymfony/templates/doctor/index.html.twig
@@ -5,19 +5,42 @@
 {% block body %}
     <h1>Doctor index</h1>
 
+    <form method="get">
+        <div>
+            <label for="firstName">First Name</label>
+            <input type="text" id="firstName" name="firstName" value="{{ app.request.query.get('firstName') }}">
+        </div>
+        <div>
+            <label for="lastName">Last Name</label>
+            <input type="text" id="lastName" name="lastName" value="{{ app.request.query.get('lastName') }}">
+        </div>
+        <div>
+            <label for="specialization">Specialization</label>
+            <input type="text" id="specialization" name="specialization" value="{{ app.request.query.get('specialization') }}">
+        </div>
+        <div>
+            <label for="phone">Phone</label>
+            <input type="text" id="phone" name="phone" value="{{ app.request.query.get('phone') }}">
+        </div>
+        <div class="form-group">
+            <input type="number" name="itemsPerPage" placeholder="Items per page" value="{{ app.request.get('itemsPerPage') ?? 10 }}" class="form-control" />
+        </div>
+        <button type="submit">Search</button>
+    </form>
+
     <table class="table">
         <thead>
-            <tr>
-                <th>Id</th>
-                <th>FirstName</th>
-                <th>LastName</th>
-                <th>Specialization</th>
-                <th>Phone</th>
-                <th>actions</th>
-            </tr>
+        <tr>
+            <th>Id</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Specialization</th>
+            <th>Phone</th>
+            <th>Actions</th>
+        </tr>
         </thead>
         <tbody>
-        {% for doctor in doctors %}
+        {% for doctor in pagination %}
             <tr>
                 <td>{{ doctor.id }}</td>
                 <td>{{ doctor.firstName }}</td>
@@ -25,17 +48,20 @@
                 <td>{{ doctor.specialization }}</td>
                 <td>{{ doctor.phone }}</td>
                 <td>
-                    <a href="{{ path('app_doctor_show', {'id': doctor.id}) }}">show</a>
-                    <a href="{{ path('app_doctor_edit', {'id': doctor.id}) }}">edit</a>
+                    <a href="{{ path('app_doctor_show', {'id': doctor.id}) }}">Show</a>
+                    <a href="{{ path('app_doctor_edit', {'id': doctor.id}) }}">Edit</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="6">no records found</td>
+                <td colspan="6">No records found</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('app_doctor_new') }}">Create new</a>
+    <div class="pagination">
+        {{ knp_pagination_render(pagination) }}
+    </div>
+    <a href="{{ path('app_doctor_new') }}" class="btn btn-success mt-3">Create New Doctor</a>
 {% endblock %}
